デザインの変更

--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <head>
     <title>発音チエック</title>
+    <style>
+  input {
+  display: block;
+  background-color: #a9cdff;
+  color: #FFF;
+  width: 150px; 
+  height: 150px; 
+  line-height: 150px;
+  border: 1px solid #ccc; 
+  border-radius: 50%;
+  text-align: center;
+  overflow: hidden;
+  transition: .5s;
+  font-size: 35px;
+  margin: 0 auto; 
+}
+input:hover {
+  background-color: #5373b6;
+}
+    </style>
 </head>
 <body>
     <input type="button" id='startButton' value="start"></button>
