--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- Also, main.js is injected here-->
   </body>
 </html>
